# hireflow

./: .env.prod.example  .gitignore  CLAUDE.md  Makefile  Tiltfile  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/scripts/: backfill_candidate_names.py  backfill_candidate_summaries.py  create_admin.py  export_openapi.py  nuke_documents.py  prepare_viewables.py  reclassify_documents.py  reextract_all.py  reindex_embeddings.py  relink_authors.py
backend/tests/: conftest.py  factories.py  gmail_responses.py  test_applications_auth.py  test_auth.py  test_author_linkage_pipeline.py  test_author_linkage_service.py  test_backfill_candidate_names.py  test_candidate_attachments.py  test_candidate_summary_service.py  test_chunk_retrieval.py  test_chunking.py  test_cross_encoder_reranker.py  test_csv_tsv_provider.py  test_document_fts.py  test_document_metadata_filter.py  test_document_vector.py  test_documents_author.py  test_documents_list_filters.py  test_documents_similar_endpoint.py  test_documents_viewable_endpoint.py  test_embedding_provider.py  test_embedding_service.py  test_encryption.py  test_errors.py  test_gmail_oauth.py  test_gmail_sync.py  test_highlight.py  test_intent_classifier.py  test_job_status.py  test_llm_chunk_contextualizer.py  test_llm_error_translation.py  test_matching_signals.py  test_office_to_pdf_provider.py  test_query_expansion.py  test_query_parser.py  test_rag_answer_prompt_format.py  (+16 more)
(+326 files in other folders)
